# roq-bybit

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt  create_order.cpp
conda/: meta.yaml  run_test.sh
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/bybit/: .gitignore  CMakeLists.txt  README  TODO  account.cpp  account.hpp  api.cpp  api.hpp  api.json  application.cpp  application.hpp  authenticator.cpp  authenticator.hpp  config.cpp  config.hpp  depdiko.sh  drop_copy.cpp  drop_copy.hpp  flags.cpp  flags.hpp  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_state.hpp  order_entry_state.json  order_entry_ws.cpp  order_entry_ws.hpp  rest.cpp  rest.hpp  rest_state.hpp  rest_state.json  settings.cpp  (+7 more)
src/roq/bybit/benchmark/: CMakeLists.txt  create_order.cpp
src/roq/bybit/config/: bybit-testnet.toml  bybit.toml  depdiko.toml
src/roq/bybit/fix_bridge/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/bybit/flags/: .gitignore  CMakeLists.txt  common.json  download.json  flags.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/bybit/gateway/: account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_ws.cpp  order_entry_ws.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/bybit/json/: .gitignore  CMakeLists.txt  account.json  account_info.json  account_info_ack.json  account_info_ack_result.json  account_info_result.json  account_result.json  account_result_item.json  account_type.json  amend_order.json  amend_order2.json  amend_order2_data.json  amend_order_ack.json  amend_order_ack_result.json  amend_order_result.json  auth.json  auth2.json  book_ticker.json  book_ticker_data.json  cancel_all_orders.json  cancel_all_orders_ack.json  cancel_all_orders_ack_result.json  cancel_all_orders_ack_result_list_item.json  cancel_all_orders_result.json  cancel_all_orders_result_item.json  cancel_order.json  cancel_order2.json  cancel_order2_data.json  cancel_order_ack.json  cancel_order_ack_result.json  cancel_order_result.json  cancel_orders.json  cancel_orders_result.json  cancel_type.json  category.json  contract_type.json  create_order.json  create_order_result.json  encoder.cpp  (+126 more)
src/roq/bybit/protocol/json/: .gitignore  CMakeLists.txt  account_info_ack.json  account_info_ack_result.json  account_type.json  amend_order2.json  amend_order2_data.json  amend_order_ack.json  amend_order_ack_result.json  auth.json  auth2.json  cancel_all_orders_ack.json  cancel_all_orders_ack_result.json  cancel_all_orders_ack_result_list_item.json  cancel_order2.json  cancel_order2_data.json  cancel_order_ack.json  cancel_order_ack_result.json  cancel_type.json  category.json  contract_type.json  encoder.cpp  encoder.hpp  error.json  event_type.json  exec_type.json  execution.json  execution_data_item.json  executions_ack.json  executions_ack_result.json  executions_ack_result_list_item.json  header2.json  instruments_info_ack.json  instruments_info_ack_result.json  instruments_info_ack_result_list_item.json  kline.json  kline_ack.json  kline_ack_result.json  kline_ack_result_list_item.json  kline_item.json  (+57 more)
src/roq/bybit/test/: CMakeLists.txt  json_account_info.cpp  json_amend_order.cpp  json_auth.cpp  json_cancel_all_orders.cpp  json_cancel_order.cpp  json_error.cpp  json_execution.cpp  json_instrument_info.cpp  json_open_orders.cpp  json_order.cpp  json_order_book.cpp  json_ping.cpp  json_place_order.cpp  json_position.cpp  json_position_info.cpp  json_public_trade.cpp  json_subscribe.cpp  json_tickers.cpp
src/roq/bybit/tools/: .gitignore  CMakeLists.txt  crypto.cpp  crypto.hpp
test/: .gitignore  CMakeLists.txt  json_account.cpp  json_account_info.cpp  json_account_info_ack.cpp  json_amend_order.cpp  json_amend_order_2.cpp  json_amend_order_ack.cpp  json_auth.cpp  json_auth_2.cpp  json_book_ticker.cpp  json_cancel_all_orders.cpp  json_cancel_all_orders_ack.cpp  json_cancel_order.cpp  json_cancel_order_2.cpp  json_cancel_order_ack.cpp  json_cancel_orders.cpp  json_create_order.cpp  json_encoder.cpp  json_error.cpp  json_execution.cpp  json_execution_2.cpp  json_executions_ack.cpp  json_instrument_info.cpp  json_instruments_info.cpp  json_instruments_info_ack.cpp  json_market_info.cpp  json_open_orders.cpp  json_order.cpp  json_order_book.cpp  json_orders.cpp  json_orders_ack.cpp  json_outbound_account_info.cpp  json_ping.cpp  json_place_order.cpp  json_place_order_2.cpp  json_place_order_ack.cpp  json_pong.cpp  json_position.cpp  json_position_info.cpp  (+14 more)
